--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,36 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/image_welcome"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Saiko"
         tools:targetApi="31">
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
             android:name=".view.register.RegisterActivity"
             android:exported="true"/>
@@ -19,8 +39,18 @@
             android:name=".view.login.LoginActivity"
             android:exported="true"/>
         <activity
+            android:name=".view.welcome.WelcomeActivity"
+            android:exported="true"/>
+        <activity
             android:name=".view.main.MainActivity"
             android:exported="true"/>
+        <activity
+            android:name=".view.camera.AddDaganganActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".view.story.DetailStoryActivity"
+            android:exported="false"
+            tools:ignore="MissingClass" />
         <activity
             android:name=".view.SplashScreenActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
